--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
     </section>
     <hr class="m-0" />
     <!-- Skills-->
-    <section class="resume-section" id="skills">
+    <section class="resume-section" >
       <div class="resume-section-content">
-        <h2 class="mb-5">Habilidades</h2>
+        <h2 class="mb-5" id="skills">Habilidades</h2>
         <div class="subheading mb-3">Habilidades Técnicas</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item"><i class="fab fa-html5"></i> HTML 5</li>
