--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiência</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
+        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li> -->
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificações</a></li>
       </ul>
     </div>
@@ -149,13 +149,13 @@
     </section>
     <hr class="m-0" />
     <!-- Interests-->
-    <section class="resume-section" id="interests">
+    <!-- <section class="resume-section" id="interests">
       <div class="resume-section-content">
         <h2 class="mb-5">Interesses</h2>
         <p>Além de tecnologia, em meu tempo livre gosto de sair e jogar com meus amigos, assistir filmes, séries, animes, etc.</p>
         <p class="mb-0"></p>
       </div>
-    </section>
+    </section> -->
     <hr class="m-0" />
     <!-- Awards-->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
