--- a/indexEN.html
+++ b/indexEN.html
@@ -185,7 +185,7 @@
 
     <div>
       <div class="downloadcv text-right pull-right columns download fixed-bottom mb-5">
-        <a href="assets/pdf/CurriculoJV.pdf" class="button" target="_blank"><i class="fa fa-download">
+        <a href="assets/pdf/CurriculoJVEN.pdf" class="button" target="_blank"><i class="fa fa-download">
           </i> Download Resume</a>
       </div>
       <br>
