--- a/indexEN.html
+++ b/indexEN.html
@@ -58,7 +58,7 @@
           São Paulo - SP · Brazil · +55(11) 96628 7811 <br>
           <a href="mailto:name@email.com">joseparanan@gmail.com</a>
         </div>
-        <p class="lead mb-5">Java Web Developer, graduated in Systems Analysis and Development.
+        <p class="lead mb-5">Java Web Developer, graduated in Systems Analysis and Development. <br> 
           Currently looking for an opportunity in the job market to evolve professionally.</p>
         <div class="social-icons">
           <a class="social-icon" href="https://www.linkedin.com/in/jvpbr/" target="_blank"><i
