Atualizacao experiencias curriculo-PT

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="mailto:name@email.com">joseparanan@gmail.com</a>
         </div>
         <p class="lead mb-5">Desenvolvedor Web Java, formado em Análise e Desenvolvimento de Sistemas. <br> 
-          Atualmente buscando uma oportunidade no mercado de trabalho para evoluir profissionalmente.</p>
+          </p>
         <div class="social-icons">
           <a class="social-icon" href="https://www.linkedin.com/in/jvpbr/" target="_blank"><i
               class="fab fa-linkedin-in"></i></a>
@@ -77,13 +77,41 @@
             <p>Como aprendiz fui responsável por tarefas administrativas e suporte ao time da área de manobra.
               <br> Dentre elas: <br>
               - Organização de documentos <br>
-              - Interface com outras áreas com o envio de documentos por malote <br>
-              - Suporte á equipe solicitando o serviço de descobrimento de registros <br>
-              - Registro de todas solicitações e malotes por meio de uma planilha que implementei <br>
-              </p>
+              - Interface com outras áreas com o envio de documentos por malote; <br>
+              - Suporte á equipe solicitando o serviço de descobrimento de registros; <br>
+              - Registro de todas solicitações e malotes por meio de uma planilha que implementei; <br>
+            </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">2014 - 2016</span></div>
         </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Analista de Sistemas</h3>
+            <div class="subheading mb-3">TIVIT TERCEIRIZAÇÃO DE PROCESSOS, SERVIÇOS E TECNOLOGIA S.A.</div>
+            <p>
+              - Atuação no desenvolvimento de novas paginas e melhorias;<br>
+              - Reuniões diárias e práticas de desenvolvimento ágil;<br>
+              - Desevolvimento Full-Stack utilizando Java 7 no back-end e framework Angular 6 no front-end;<br>
+            </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">07/2021 - 12/2021</span></div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Analista de Sistemas</h3>
+            <div class="subheading mb-3">GLOBALWEB OUTSOURCING DO BRASIL S.A.</div>
+            <p>
+              - Atuação no desenvolvimento de novas paginas e melhorias;<br>
+              - Reuniões diárias e práticas de desenvolvimento ágil;<br>
+              - Desevolvimento Full-Stack utilizando Java 7 no back-end e framework Angular 6 no front-end <br>
+            </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">01/2022 - 06/2022</span></div>
+        </div>
+        
+        
       </div>
     </section>
     <hr class="m-0" />
