--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <div class="mt-2">
-      <a class="btn btn-secondary" href="indexEN.html">English version</a>
+      <!-- <a class="btn btn-secondary" href="indexEN.html">English version</a> -->
     </div>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">José Victor Paranan Barbosa Roman</span>
@@ -183,7 +183,7 @@
     <!-- <section class="resume-section" id="interests">
       <div class="resume-section-content">
         <h2 class="mb-5">Interesses</h2>
-        <p>Além de tecnologia, em meu tempo livre gosto de sair e jogar com meus amigos, assistir filmes, séries, animes, etc.</p>
+        <p>...</p>
         <p class="mb-0"></p>
       </div>
     </section> -->
