atualizacao do curriculo e pequenos ajustes.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <div class="mt-2">
-      <!-- <a class="btn btn-secondary" href="indexEN.html">English version</a> -->
+      <a class="btn btn-secondary" href="indexEN.html">English version</a>
     </div>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">José Victor Paranan Barbosa Roman</span>
@@ -55,7 +55,7 @@
           São Paulo - SP · Brasil · (11) 96628 7811 <br>
           <a href="mailto:name@email.com">joseparanan@gmail.com</a>
         </div>
-        <p class="lead mb-5">Desenvolvedor Web Java, formado em Análise e Desenvolvimento de Sistemas. <br> 
+        <p class="lead mb-5">Desenvolvedor Web React, formado em Análise e Desenvolvimento de Sistemas. <br> 
           </p>
         <div class="social-icons">
           <a class="social-icon" href="https://www.linkedin.com/in/jvpbr/" target="_blank"><i
@@ -76,11 +76,11 @@
             <h3 class="mb-0">Analista de Sistemas Pl</h3>
             <div class="subheading mb-3">GLOBALWEB OUTSOURCING DO BRASIL S.A.</div>
             <p>
-              - Atuação no desenvolvimento de novas paginas e melhorias;<br>
-              - Reuniões diárias e práticas de desenvolvimento ágil;<br>
-              - Desenvolvimento Full-Stack utilizando Java e OracleSql no back-end e framework Angular(typescript/html/css/bootstrap) no front-end;<br>
-              - Git para versionamento do código;<br>
-              - Jira para alocação de demandas;<br>
+              - Desenvolvimento de Novas Páginas e Melhorias: Contribuí para a criação e otimização de interfaces, melhorando a experiência do usuário;<br>
+              - Metodologia Ágil: Participação em reuniões diárias e aplicação de práticas ágeis para garantir eficiência no desenvolvimento;<br>
+              - Full-Stack Development: Experiência em Java e Oracle SQL no back-end, e uso de Angular (TypeScript/HTML/CSS/Bootstrap) no front-end para a construção de aplicações interativas;<br>
+              - Versionamento de Código: Utilização de Git para controle de versão, facilitando a colaboração em equipe;<br>
+              - Gestão de Projetos com Jira: Alocação e acompanhamento de demandas por meio do Jira, assegurando a transparência e organização no fluxo de trabalho;<br>
             </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">01/2022 - 06/2022</span></div>
@@ -91,11 +91,11 @@
             <h3 class="mb-0">Analista de Sistemas Jr</h3>
             <div class="subheading mb-3">TIVIT TERCEIRIZAÇÃO DE PROCESSOS, SERVIÇOS E TECNOLOGIA S.A.</div>
             <p>
-              - Atuação no desenvolvimento de novas paginas e melhorias;<br>
-              - Reuniões diárias e práticas de desenvolvimento ágil;<br>
-              - Desenvolvimento Full-Stack utilizando Java e OracleSql no back-end e framework Angular(typescript/html/css/bootstrap) no front-end;<br>
-              - Git para versionamento do código;<br>
-              - Jira para alocação de demandas;<br>
+              - Desenvolvimento de Novas Páginas e Melhorias: Contribuí para a criação e otimização de interfaces, melhorando a experiência do usuário;<br>
+              - Metodologia Ágil: Participação em reuniões diárias e aplicação de práticas ágeis para garantir eficiência no desenvolvimento;<br>
+              - Full-Stack Development: Experiência em Java e Oracle SQL no back-end, e uso de Angular (TypeScript/HTML/CSS/Bootstrap) no front-end para a construção de aplicações interativas;<br>
+              - Versionamento de Código: Utilização de Git para controle de versão, facilitando a colaboração em equipe;<br>
+              - Gestão de Projetos com Jira: Alocação e acompanhamento de demandas por meio do Jira, assegurando a transparência e organização no fluxo de trabalho;<br>
             </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">07/2021 - 12/2021</span></div>
@@ -160,6 +160,7 @@
         <h2 class="mb-5" id="skills">Habilidades</h2>
         <div class="subheading mb-3">Habilidades Técnicas</div>
         <ul class="list-inline dev-icons">
+          <li class="list-inline-item"><i class="fab fa-react"></i>React</li>
           <li class="list-inline-item"><i class="fab fa-html5"></i> HTML 5</li>
           <li class="list-inline-item"><i class="fab fa-css3-alt"></i> CSS 3</li>
           <li><i class="fab fa-js-square"></i> JavaScript/TypeScript</li>
