--- a/indexEN.html
+++ b/indexEN.html
@@ -58,7 +58,7 @@
           São Paulo - SP · Brazil · +55(11) 96628 7811 <br>
           <a href="mailto:name@email.com">joseparanan@gmail.com</a>
         </div>
-        <p class="lead mb-5">Java Web Developer, graduated in Systems Analysis and Development. <br> 
+        <p class="lead mb-5">React Web Developer, graduated in Systems Analysis and Development. <br> 
           Currently looking for an opportunity in the job market to evolve professionally.</p>
         <div class="social-icons">
           <a class="social-icon" href="https://www.linkedin.com/in/jvpbr/" target="_blank"><i
@@ -73,11 +73,41 @@
     <section class="resume-section" id="experience">
       <div class="resume-section-content">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Systems Analyst Pl</h3>
+            <div class="subheading mb-3">GLOBALWEB OUTSOURCING DO BRASIL S.A.</div>
+            <p>
+              - Development of New Pages and Improvements: I contributed to the creation and optimization of interfaces, enhancing the user experience;<br>
+              - Agile Methodology: Participated in daily meetings and applied agile practices to ensure efficiency in development;<br>
+              - Full-Stack Development: Experience in Java and Oracle SQL for the back-end, and using Angular (TypeScript/HTML/CSS/Bootstrap) on the front-end to build interactive applications;<br>
+              - Version Control: Utilized Git for version control, facilitating team collaboration;<br>
+              - Project Management with Jira: Allocated and monitored tasks using Jira, ensuring transparency and organization in the workflow;<br>
+            </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">01/2022 - 06/2022</span></div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Systems Analyst Jr</h3>
+            <div class="subheading mb-3">TIVIT TERCEIRIZAÇÃO DE PROCESSOS, SERVIÇOS E TECNOLOGIA S.A.</div>
+            <p>
+              - Development of New Pages and Improvements: I contributed to the creation and optimization of interfaces, enhancing the user experience;<br>
+              - Agile Methodology: Participated in daily meetings and applied agile practices to ensure efficiency in development;<br>
+              - Full-Stack Development: Experience in Java and Oracle SQL for the back-end, and using Angular (TypeScript/HTML/CSS/Bootstrap) on the front-end to build interactive applications;<br>
+              - Version Control: Utilized Git for version control, facilitating team collaboration;<br>
+              - Project Management with Jira: Allocated and monitored tasks using Jira, ensuring transparency and organization in the workflow;<br>
+            </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">07/2021 - 12/2021</span></div>
+        </div>
+
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <h3 class="mb-0">Apprentice</h3>
-            <div class="subheading mb-3">CIA. OF BASIC SANITATION OF THE STATE OF SAO PAULO - SABESP
-            </div>
+            <div class="subheading mb-3">CIA. DE SANEAMENTO BASICO DO ESTADO DE SAO PAULO - SABESP</div>
             <p>As an apprentice I was responsible for administrative tasks and support to the maneuver area team.
               <br> Among them: <br>
               - Organization of documents <br>
@@ -112,6 +142,16 @@
           </div>
           <div class="flex-shrink-0"><span class="text-primary">February 2021 - May 2021</span></div>
         </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">SENAI Frederico Jacob</h3>
+            <div class="subheading mb-3">Administrative Agent</div>
+            <div>Concluded</div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">2014 - 2016</span></div>
+        </div>
+
       </div>
     </section>
     <hr class="m-0" />
@@ -121,6 +161,7 @@
         <h2 class="mb-5" id="skills">Skills</h2>
         <div class="subheading mb-3">Technical Abilities</div>
         <ul class="list-inline dev-icons">
+          <li class="list-inline-item"><i class="fab fa-react"></i>React</li>
           <li class="list-inline-item"><i class="fab fa-html5"></i> HTML 5</li>
           <li class="list-inline-item"><i class="fab fa-css3-alt"></i> CSS 3</li>
           <li><i class="fab fa-js-square"></i> JavaScript/TypeScript</li>
@@ -132,7 +173,7 @@
 
 
         </ul>
-        <div class="subheading mb-3">Behavioral Skills</div>
+        <!-- <div class="subheading mb-3">Behavioral Skills</div>
         <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -151,7 +192,7 @@
             Growth mentality, always looking for some way to improve professionally and personally.
           </li>
 
-        </ul>
+        </ul> -->
       </div>
     </section>
     <hr class="m-0" />
